--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "types": ["node"],
     "lib": ["es2020", "dom"],
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
