Fix Electron app packaging and runtime issues
- Fix webPreferences configuration in main.ts (add nodeIntegration: false, contextIsolation: true)
- Replace TypeScript renderer with plain JavaScript to avoid CommonJS module issues
- Update package.json main entry point from 'dist/main.js' to 'main.js'
- Modify TypeScript config to output to root directory instead of dist/
- Update build process to copy files to correct locations for packaging
- Remove problematic renderer.ts and replace with renderer.js
- Fix 'exports is not defined' error in packaged executable
- Fix 'Cannot find module' error in app.asar

The app now works correctly as both a development version and packaged executable.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "name": "sum_exe",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/main.js",
+    "main": "main.js",
     "scripts": {
         "dist": "electron-builder",
         "build": "tsc",
         "pack": "electron-builder --dir",
-        "postbuild": "copyfiles -u 1 src/index.html src/styles.css dist",
+        "postbuild": "copyfiles -u 1 src/index.html src/styles.css src/renderer.js .",
         "start": "electron .",
         "dev": "electron ."
     },
