Fix GitHub Actions: Add GH_TOKEN env var and configure electron-builder to prevent auto-publish

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run dist
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - uses: actions/upload-artifact@v4
         with:
           name: sum-electron-windows
