Rename project from Sum_exe to Calculator_exe
- Updated package.json name and build configuration
- Changed GitHub Actions artifact name to calculator-electron-windows
- Updated HTML title and heading from Sum to Calculator
- Renamed API method from sum() to calculate()
- Updated console log messages
- Rebuilt application with new executable name: calculator_exe.exe
- Configured electron-builder with proper app metadata

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - uses: actions/upload-artifact@v4
         with:
-          name: sum-electron-windows
+          name: calculator-electron-windows
           path: dist/*.exe
