Disable code signing for Windows build to avoid permission issues

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "win": {
             "target": "portable",
             "icon": null,
-            "forceCodeSigning": false
+            "forceCodeSigning": false,
+            "sign": null,
+            "verifyUpdateCodeSignature": false
         },
         "nsis": {
             "oneClick": false,
