--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
           cache: npm
       - run: npm install
       - run: npm run build
-      - run: npm run dist
+      - run: npm run dist-no-sign
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          CSC_IDENTITY_AUTO_DISCOVERY: false
       - uses: actions/upload-artifact@v4
         with:
           name: calculator-electron-windows
-          path: dist/*.exe
+          path: dist/win-unpacked/calculator_exe.exe
